prepare clipboard resources

--- a/clipboard/package.json
+++ b/clipboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clipboard",
   "version": "1.0.0",
-  "description": "Simple file structure for Tailwind projects",
+  "description": "Tailwind projects",
   "main": "index.js",
   "scripts": {
     "watch": "tailwindcss -i ./input.css -o ./css/style.css --watch",
